[package]
name = "dbap"
version = "0.1.0"
authors = ["mitchmindtree <mitchell.nordine@gmail.com>"]
edition = "2018"
description = "An implementation of Distance Based Amplitude Panning by Lossius et al in Rust."
readme = "README.md"
keywords = ["distance", "amplitude", "panning", "audio", "speaker"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/mitchmindtree/dbap.git"
homepage = "https://github.com/mitchmindtree/dbap"

[dependencies]
num-traits = "0.2"
